--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
     <button type="button" id="rollD20Button">Roll D20</button>
 
 
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
